# wayland-voice-dictation

./: .gitignore  ARCHITECTURE.md  CONFIG_VALIDATION_CHECKLIST.md  Cargo.toml  Dockerfile  GUI_BLOCKING_ISSUE.md  ICED_MIGRATION.md  LICENSE-APACHE  LICENSE-MIT  Makefile  OVERLAY_FIXES.md  README.md  TESTING.md  TODO.md  config-schema.json  install.sh  test_engine.sh  test_gui_mock.py  test_manual.sh  test_server_mock.py  test_whisper.sh  uninstall.sh  watch-daemon.sh
.github/workflows/: release.yml
dictation-engine/: Cargo.toml
dictation-engine/src/: app_profile.rs  audio.rs  chunking.rs  control_ipc.rs  dbus_control.rs  debug_audio.rs  engine.rs  gpu_detect.rs  gui_control.rs  ipc.rs  keyboard.rs  lib.rs  main.rs  model_manager.rs  model_selector.rs  parakeet_engine.rs  stream_muxer.rs  tray.rs  user_dictionary.rs  vad.rs  vosk_engine.rs  whisper.rs  whisper_engine.rs  window_detect.rs  window_target.rs
dictation-engine/src/audio_backend/: cpal_backend.rs  mod.rs  pipewire_backend.rs
dictation-engine/src/post_processing/: acronym.rs  grammar.rs  mod.rs  punctuation.rs  sanitize.rs
dictation-engine/tests/: ipc_integration.rs
dictation-gui/: Cargo.toml
dictation-gui/src/: animation.rs  animations.rs  background_tasks.rs  channel_listener.rs  collapse_widget.rs  config.rs  control_ipc.rs  fft.rs  ipc.rs  ipc_subscription.rs  layout.rs  lib.rs  main.rs  main_old.rs  monitor_detection.rs  per_monitor_window.rs  platform.rs  renderer.rs  renderer_v2.rs  shared_state.rs  spectrum_widget.rs  spinner_widget.rs  text_renderer.rs  wayland.rs
dictation-gui/tests/: ipc_integration.rs
dictation-types/: Cargo.toml
dictation-types/src/: lib.rs
docs/: AUDIO.md  ERROR_HANDLING.md
models/: download-models.sh
monitor-label-poc/: Cargo.toml  watch.sh
monitor-label-poc/src/: lib.rs  main.rs
packaging/arch/: PKGBUILD  hyprland-voice-dictation.install
packaging/deb/: build-deb.sh
packaging/rpm/: build-rpm.sh  voice-dictation.spec
packaging/systemd/: voice-dictation-gui.service  voice-dictation.service
scripts/: build-full.sh  check-deps.sh  dictation-control  download-parakeet-model.sh  download-whisper-models.sh  list-audio-devices.sh  list-models.sh  list-vosk-models.sh  run-gui-overlay.sh  send_confirm.py  update.sh
slint-gui/: Cargo.toml
slint-gui/src/: lib.rs  monitor.rs
slint-gui/ui/: closing.slint  dictation.slint  listening.slint  overlay.slint  processing.slint
slint-gui/ui/examples/: README.md  style1-default.slint  style2-minimal.slint
src/: main.rs  utils.rs
