[package]
name = "voice-dictation"
version = "0.1.0"
edition = "2021"

[features]
# All engines always compiled - runtime detection determines availability
default = ["vosk", "parakeet", "slint-gui", "pipewire"]
vosk = ["dictation-engine/vosk"]
parakeet = ["dictation-engine/parakeet"]
gpu = ["dictation-engine/gpu"]  # Requires CUDA at build time
slint-gui = ["dictation-engine/slint-gui", "dep:slint-gui"]
pipewire = ["dictation-engine/pipewire"]  # Native PipeWire audio backend

[dependencies]
dictation-engine = { path = "dictation-engine", default-features = false }
slint-gui = { path = "slint-gui", optional = true }
schema-tui = { git = "https://github.com/MasonRhodesDev/schema-tui.git" }
clap = { version = "4", features = ["derive"] }
zbus = "4.1"
tokio = { workspace = true }
cpal = "0.15"
systemd = "0.10"

[workspace]
members = [
    "dictation-engine",
    "dictation-types",
    "slint-gui",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
