[package]
name = "voice-dictation"
version = "0.1.0"
edition = "2021"

[features]
default = ["pipewire", "tray"]
pipewire = ["dictation-engine/pipewire"]  # Native PipeWire audio backend
tray = ["dictation-engine/tray"]

[dependencies]
dictation-engine = { path = "dictation-engine", default-features = false }
slint-gui = { path = "slint-gui" }
schema-tui = { git = "https://github.com/MasonRhodesDev/schema-tui.git" }
clap = { version = "4", features = ["derive"] }
zbus = "5"
tokio = { workspace = true }
systemd = "0.10"
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }

[workspace]
members = [
    "dictation-engine",
    "dictation-types",
    "slint-gui",
]
resolver = "2"

[patch.crates-io]
layer-shika-adapters = { path = "vendor/layer-shika-adapters" }

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
