[package]
name = "dictation-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["slint-gui", "pipewire"]
slint-gui = ["dep:slint-gui"]
pipewire = ["dep:pipewire"]

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }

slint-gui = { path = "../slint-gui", optional = true }
dictation-types = { path = "../dictation-types" }
shellexpand = "3"
cpal = "0.15"
toml = "0.8"
harper-core = "0.68"
zbus = "4.1"
systemd = "0.10"
dirs = "5"
notify = "6"
hound = "3.5"
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
# Silero VAD (neural voice activity detection)
# NOTE: Keep exact versions aligned with parakeet-rs requirements
ort = "=2.0.0-rc.10"
ndarray = "=0.16.1"
# Parakeet engine
parakeet-rs = "0.2"
tempfile = "3"
# SHA256 verification for VAD model
sha2 = "0.10"
hex = "0.4"
# VAD model download
reqwest = { version = "0.12", features = ["blocking"] }
# PipeWire native audio backend
pipewire = { version = "0.8", optional = true }

[dev-dependencies]

[lib]
name = "dictation_engine"
path = "src/lib.rs"
