[package]
name = "dictation-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Wayland layer-shell
smithay-client-toolkit = "0.18"
wayland-client = "0.31"
wayland-protocols-wlr = "0.2"

# Rendering
tiny-skia = "0.11"
fontdue = "0.9"

# Shared memory
memmap2 = "0.9"
tempfile = "3"

# FFT
rustfft = "6"

# Configuration
toml = "0.8"
shellexpand = "3"
dirs = "5"
