[package]
name = "monitor-label-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }

iced = { version = "0.13", features = ["canvas", "tokio", "advanced"] }
iced_layershell = "0.13.7"

smithay-client-toolkit = "0.18"
wayland-client = "0.31"
wayland-protocols-wlr = "0.2"

[lib]
name = "monitor_label_poc"
path = "src/lib.rs"

[[bin]]
name = "monitor-label-poc"
path = "src/main.rs"
