[package]
name = "slint-gui"
version = "0.1.0"
edition = "2021"
description = "Slint-based GUI overlay for voice dictation"

[dependencies]
layer-shika = "0.2"
slint = "1.14"
hyprland = "0.4.0-alpha.3"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
dictation-types = { path = "../dictation-types" }
notify = "6"
